// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Manifestation Query all fields 1`] = `
Object {
  "data": Object {
    "manifestation": Object {
      "abstract": Array [
        "Dummy Some abstract ...",
      ],
      "access": Array [
        Object {
          "__typename": "AccessUrl",
          "origin": "infolink2003.elbo.dk",
          "url": "http://infolink2003.elbo.dk/DVT/dokumenter/doc/15271.pdf",
        },
        Object {
          "__typename": "DigitalArticleService",
          "issn": "09021620",
        },
      ],
      "accessTypes": Array [
        Object {
          "code": "PHYSICAL",
          "display": "Dummy fysisk",
        },
        Object {
          "code": "ONLINE",
          "display": "Dummy online",
        },
      ],
      "audience": Object {
        "ages": Array [
          Object {
            "begin": 10,
            "display": "Dummy 10-14",
            "end": 14,
          },
        ],
        "childrenOrAdults": Array [
          Object {
            "code": "FOR_CHILDREN",
            "display": "Dummy til børn",
          },
        ],
        "generalAudience": Array [
          "Dummy general audience",
        ],
        "let": "Dummy some let",
        "libraryRecommendation": "Dummy some library recommendation",
        "lix": "Dummy some lix",
        "primaryTarget": Array [
          "Dummy Some primary target",
        ],
        "schoolUse": Array [
          Object {
            "code": "FOR_SCHOOL_USE",
            "display": "Dummy til skolebrug",
          },
        ],
      },
      "catalogueCodes": Object {
        "nationalBibliography": Array [
          "national_bibliography",
        ],
        "otherCatalogues": Array [
          "other_catalogueCodes",
          "even_other_catalogueCodes",
        ],
      },
      "classifications": Array [
        Object {
          "code": "Dummy 86-096",
          "display": "Dummy 86-096, Skønlitteratur",
          "dk5Heading": "Dummy Skønlitteratur",
          "entryType": "NATIONAL_BIBLIOGRAPHY_ENTRY",
          "system": "Dummy DK5",
        },
        Object {
          "code": "Dummy 86-096 additional",
          "display": "Dummy 86-096, Skønlitteratur additional",
          "dk5Heading": "Dummy Skønlitteratur additional",
          "entryType": "NATIONAL_BIBLIOGRAPHY_ADDITIONAL_ENTRY",
          "system": "Dummy DK5 additional",
        },
      ],
      "contributors": Array [
        Object {
          "display": "Dummy Jens Jensen",
          "nameSort": "Dummy Jensen Jens",
        },
      ],
      "contributorsFromDescription": Array [
        "Dummy på dansk ved Vivi Berendt",
      ],
      "cover": Object {
        "detail": "link-to-detail",
        "detail_117": "link-to-detail_117",
        "detail_207": "link-to-detail_207",
        "detail_42": "link-to-detail_42",
        "detail_500": "link-to-detail_500",
        "thumbnail": "link-to-thumbnail",
      },
      "creators": Array [
        Object {
          "display": "Dummy Jens Jensen",
          "nameSort": "Dummy Jensen Jens",
        },
        Object {
          "display": "Dummy Some Corporation",
          "nameSort": "Dummy Some Corporation for sorting",
        },
      ],
      "creatorsFromDescription": Array [
        "Dummy tekst af William Warren",
      ],
      "dateFirstEdition": Object {
        "display": "Dummy first edition",
        "endYear": 1950,
        "frequency": "1",
        "year": 1950,
      },
      "edition": Object {
        "contributors": Array [],
        "edition": "Dummy 3. i.e. 2 udgave",
        "publicationYear": Object {
          "display": "Dummy 2005",
          "endYear": null,
          "frequency": null,
          "year": 2005,
        },
        "summary": "Dummy 3. i.e. 2 udgave, 2005",
      },
      "genreAndForm": Array [
        "Dummy some genre",
      ],
      "hostPublication": Object {
        "creator": "Dummy Some Creator",
        "isbn": "Dummy some isbn",
        "issn": "Dummy 1395-7961",
        "issue": "Dummy some issue",
        "notes": Array [
          "Dummy a note",
        ],
        "pages": "Dummy 140-145",
        "publisher": "Dummy Some Publisher",
        "summary": "Dummy Årsskrift / Carlsbergfondet, 2006",
        "title": "Dummy Årsskrift / Carlsbergfondet",
        "year": Object {
          "display": "Dummy 2006",
        },
      },
      "identifiers": Array [
        Object {
          "type": "ISBN",
          "value": "Dummy 1234567891234",
        },
      ],
      "languages": Object {
        "abstract": Array [
          Object {
            "display": "Dummy dansk",
            "isoCode": "Dummy dan",
          },
        ],
        "main": Array [
          Object {
            "display": "Dummy dansk",
            "isoCode": "Dummy dan",
          },
        ],
        "notes": Array [
          "Dummy dansk",
          "dummy english",
          "dummy german",
        ],
        "original": Array [
          Object {
            "display": "Dummy dansk",
            "isoCode": "Dummy dan",
          },
        ],
        "parallel": Array [
          Object {
            "display": "Dummy dansk",
            "isoCode": "Dummy dan",
          },
        ],
        "spoken": Array [
          Object {
            "display": "Dummy dansk",
            "isoCode": "Dummy dan",
          },
        ],
        "subtitles": Array [
          Object {
            "display": "Dummy dansk",
            "isoCode": "Dummy dan",
          },
        ],
      },
      "latestPrinting": Object {
        "printing": "Dummy 11. oplag",
        "publicationYear": Object {
          "display": "Dummy 2020",
        },
        "summary": "Dummy 11. oplag, 2020",
      },
      "manifestationParts": Object {
        "heading": "Dummy Indhold:",
        "parts": Array [
          Object {
            "classifications": Array [
              Object {
                "code": "Dummy 78.424",
              },
            ],
            "creators": Array [
              Object {
                "display": "Dummy H. C. Lumbye",
              },
            ],
            "creatorsFromDescription": Array [
              "Dummy arr.: Peter Ettrup Larsen",
            ],
            "playingTime": "Dummy playing time",
            "subjects": null,
            "title": "Dummy Bouquet royal",
          },
          Object {
            "classifications": Array [
              Object {
                "code": "Dummy 88.424",
              },
            ],
            "creators": Array [
              Object {
                "display": "Dummy A. C. Handerson",
              },
            ],
            "creatorsFromDescription": Array [
              "Dummy arr.: Don Alderson Drumf",
            ],
            "playingTime": "Dummy long playing time",
            "subjects": null,
            "title": "Dummy Banker Loyal",
          },
        ],
        "type": "MUSIC_TRACKS",
      },
      "materialTypes": Array [
        Object {
          "general": "Dummy general type",
          "specific": "Dummy bog",
        },
      ],
      "notes": Array [
        Object {
          "display": Array [
            "Dummy Indspillet i Ꜳrhus Musikhus 12.-14. juni 2020",
          ],
          "heading": null,
          "type": "NOT_SPECIFIED",
        },
      ],
      "ownerWork": Object {
        "workId": "work-of:870970-basis:26521556",
      },
      "physicalDescriptions": Array [
        Object {
          "accompanyingMaterial": null,
          "additionalDescription": null,
          "extent": "Dummy 1 dvd-rom",
          "numberOfPages": null,
          "numberOfUnits": null,
          "playingTime": null,
          "requirements": "Dummy Nødvendigt udstyr Xbox One. - Med multiplayerfunktion",
          "size": null,
          "summary": "Dummy 1 dvd-rom Xbox One Nødvendigt udstyr Xbox One. - Med multiplayerfunktion Spiludvikler fremgår ikke af materialet",
          "technicalInformation": "Dummy Xbox One",
        },
      ],
      "pid": "870970-basis:26521556",
      "publisher": Array [
        "Dummy Lægeforeningen",
      ],
      "relatedPublications": Array [
        Object {
          "heading": "Dummy Tidligere titel:",
          "isbn": null,
          "issn": "Dummy 0105-0508",
          "title": Array [
            "Dummy Yngre læger",
          ],
          "url": null,
          "urlText": null,
        },
        Object {
          "heading": "Dummy Udgave i andet medium: Også på cd-rom",
          "isbn": null,
          "issn": "Dummy 1399-4174",
          "title": Array [
            "Dummy Ugeskrift for læger",
          ],
          "url": null,
          "urlText": null,
        },
      ],
      "series": Array [
        Object {
          "numberInSeries": Object {
            "number": Array [
              1,
            ],
          },
          "title": "De syv søstre-serien",
        },
      ],
      "shelfmark": Object {
        "postfix": "Dummy some postfix",
        "shelfmark": "Dummy some shelfmark",
      },
      "source": Array [
        "Dummy some source",
      ],
      "subjects": Object {
        "all": Array [
          Object {
            "display": "Dummy Some fictional subject",
          },
          Object {
            "display": "Dummy 1950-1980",
          },
          Object {
            "display": "Dummy Jens Jensen",
          },
          Object {
            "display": "Dummy Some Corporation",
          },
        ],
        "dbcVerified": Array [
          Object {
            "display": "Dummy Some fictional subject",
            "language": Object {
              "display": "Dummy dansk",
              "isoCode": "dum dan",
            },
          },
          Object {
            "display": "Dummy 1950-1980",
          },
          Object {
            "display": "Dummy Jens Jensen",
          },
          Object {
            "display": "Dummy Some Corporation",
          },
        ],
      },
      "tableOfContents": Object {
        "content": null,
        "heading": "Dummy Indhold",
        "listOfContent": Array [
          Object {
            "content": null,
          },
          Object {
            "content": "Dummy Tykke-Olsen m.fl.",
          },
          Object {
            "content": "Dummy Over skulderen",
          },
        ],
      },
      "titles": Object {
        "alternative": Array [
          "Dummy Some Title: Alternative",
        ],
        "full": Array [
          "Dummy Some Title: Full",
        ],
        "identifyingAddition": "Dummy Indlæst af Jens Jensen",
        "main": Array [
          "Dummy Some Title",
        ],
        "original": Array [
          "Dummy Some Title: Original",
        ],
        "parallel": Array [
          "Dummy Parallel Title 1",
          "Parallel Title 2",
        ],
        "sort": "Dummy Some Title Sort",
        "standard": "Dummy Some Title Standard",
        "translated": Array [
          "Dummy En Oversat Titel",
        ],
      },
      "volume": "Dummy Bind 2",
    },
  },
}
`;

exports[`Manifestation fetch by faust 1`] = `
Object {
  "data": Object {
    "manifestation": Object {
      "pid": "870970-basis:26521556",
    },
  },
}
`;

exports[`Manifestation fetch by pid 1`] = `
Object {
  "data": Object {
    "manifestation": Object {
      "pid": "870970-basis:26521556",
    },
  },
}
`;

exports[`Manifestation fetch multi by faust 1`] = `
Object {
  "data": Object {
    "manifestations": Array [
      Object {
        "pid": "870970-basis:26521556",
      },
    ],
  },
}
`;

exports[`Manifestation fetch multi by pid 1`] = `
Object {
  "data": Object {
    "manifestations": Array [
      Object {
        "pid": "870970-basis:26521556",
      },
    ],
  },
}
`;
